# sistemaerp

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .structure-plan.json  ALUFORCE-PORTATIL.bat  API_CATALOGO_PRODUTOS_DOCUMENTACAO.md  ATUALIZACAO_HEADER_SIDEBAR_PCP.md  ATUALIZACAO_MODULO_NFE.md  ATUALIZACAO_MODULO_VENDAS.md  ATUALIZACOES_CHAT_VENDAS_2025-12-10.md  Aluforce.bat  BOB_AI_DOCUMENTACAO_COMPLETA.md  BUILD-DISTRIBUICAO.ps1  CHAT_LIMPO_FINAL.md  CHAT_SAAS_PREMIUM_v3.md  CHAT_WIDGET_OMIE_STYLE.md  CHAT_WIDGET_REIMPLEMENTACAO.md  COMO_INSTALAR.md  COMO_USAR.txt  COMPARACAO_ORDEM_PRODUCAO_PCP.md  CONFIGURAR_HTTPS.md  CORRECOES_MODAIS_NOTIFICACOES.md  CORRECOES_RECURSOS_20251210.md  CORRECOES_SEGURANCA_2025-12-31.md  CRIAR_INSTALADOR.bat  DECISAO_MIGRACAO.md  DOCUMENTACAO_CHAT_COMPLETA.md  DOCUMENTACAO_COMPLETA_ATUALIZACOES.md  DOCUMENTACAO_ENDPOINTS_REAIS.md  DOCUMENTACAO_INTEGRACOES.md  EXEMPLO_ORDEM_PRODUCAO_VISUAL.xlsx  FASE_4_COMPLETA.md  FINANCEIRO_COMPLETO_README.md  GUIA-RAPIDO.md  GUIA_CHAT.md  GUIA_DE_INSTALACAO.html  GUIA_INSTALACAO_EMPRESARIAL.md  GUIA_RAPIDO_CHAT.md  GUIA_RAPIDO_VENDAS.md  (+243 more)
aluforce-desktop/src-tauri/: Cargo.toml  tauri.conf.json
aluforce-desktop/src-tauri/icons/: icon.icns
aluforce-desktop/src-tauri/resources/: README.md
aluforce-desktop/src-tauri/src/: error.rs  lib.rs  main.rs
aluforce-desktop/src-tauri/src/commands/: auth.rs  clientes.rs  compras.rs  config.rs  database.rs  financeiro.rs  fornecedores.rs  mod.rs  nfe.rs  pcp.rs  produtos.rs  rh.rs  system.rs  vendas.rs
aluforce-desktop/src-tauri/src/models/: mod.rs
(+1014 files in other folders)
