[package]
name = "aluforce-desktop"
version = "2.5.0"
description = "ALUFORCE - Sistema de Gestão Empresarial Desktop"
authors = ["ALUFORCE Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "aluforce_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "aluforce-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = "z"
strip = true
